Ticket #516: Updated the way transformed columns gets automatic names. Automatic names are now also automatically overwritten when input columns of a transformer change.